# PL2025

./: README.md
Projeto_Compilador/: .gitignore  .pylintrc  Grammar  README.md  pyproject.toml  requirements.txt
Projeto_Compilador/src/: lexer.py  parser.out  parser.py
Projeto_Compilador/src/language/: ast_nodes.py  compiler_context.py
Projeto_Compilador/tests/: test10.pas  test2.pas  test3.pas  test4.pas  test5.pas  test6.pas  test7.pas  test8.pas  test9.pas
TPC1/: README.md  input.txt  main.py
TPC2/: README.md  main.py
TPC3/: README.md  example.md  main.py
TPC4/: README.md  example.rq  main.py
TPC5/: README.md  main.py  stock.json
TPC6/: README.md  main.py
